# L9-Node-Template

./: .l9-template-version  .pre-commit-config.yaml  AGENTS.md  CHANGE_SUMMARY.md  FINAL_TREE.md  INTEGRATION_TODO.md  Justfile  Makefile  PROVENANCE_MAP.yaml  README.md  UNKNOWN_REGISTER.md  VALIDATION.md  nodespec.yaml  pyproject.toml
.cursor/rules/: .render-manifest.json  l9-node-contract.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: security_safe_report.yml
.github/governance/: blocking_policy.yaml
.github/scripts/: classify_pr.py
.github/workflows/: audit.yml  auto-merge-dependabot.yml  ci.yml  codegen-determinism.yml  contract-verify.yml  dependency-review.yml  gitleaks.yml  pr-pipeline.yml
contracts/: ENGINESPEC.yaml  NODECONTRACT.yaml
docs/: ARCHITECTURE.md  GENERATED_FILES.md  GOVERNANCE.md  LIFECYCLE.md  NODESPEC_BOUNDARY.md  folder_map_diagram.md  repo_normalization_steps.md  subsystem_topology_map.md
observability/: otel-collector.yaml
scripts/: repo_normalizer_v1.0.0.py
src/l9_service/: __init__.py  enginehandlers.py  main.py
src/l9_service/domain/: __init__.py  models.py
src/l9_service/observability/: __init__.py  bootstrap.py  logging.py  metrics.py  tracing.py
tests/: test_audit_engine.py  test_domain_models.py  test_main.py  test_render_cursor_rules.py  test_repo_normalizer.py  test_template_compliance.py  test_validate_generated_boundaries.py  test_verify_contracts.py  test_workflow_versions.py
tests/observability/: test_bootstrap.py
tools/: audit_engine.py  l9_contract_manifest.yaml  validate_generated_boundaries.py  verify_contracts.py
tools/review/analyzers/: template_compliance.py
tools/review/policy/: architecture.yaml
