[project]
name            = "l9-service"
version         = "0.1.0"
description     = "L9 service template — rename l9_service to your package"
readme          = "README.md"
requires-python = ">=3.12"
license         = { text = "Proprietary" }
dependencies = [
    "fastapi[standard]>=0.137.1",
    "uvicorn[standard]>=0.49.0",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-httpx>=0.49b0",
    "pydantic-settings>=2.14.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.17",
    "pyright>=1.1.390",
    "pre-commit>=4.0.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/l9_service"]

[tool.ruff]
target-version = "py312"
line-length    = 100
src            = ["src"]

[tool.ruff.lint]
select  = ["E","W","F","I","B","C4","UP","SIM","TID","RUF","PT","PLW","PLC","PLE"]
ignore  = ["E501","B008","PLW0603"]

[tool.ruff.lint.isort]
known-first-party = ["l9_service"]

[tool.ruff.format]
quote-style  = "double"
indent-style = "space"

[tool.pyright]
pythonVersion              = "3.12"
typeCheckingMode           = "basic"
reportMissingImports       = "warning"
reportMissingModuleSource  = false
reportOptionalMemberAccess = "warning"
reportGeneralTypeIssues    = "warning"
reportUnknownMemberType    = false
reportUnknownVariableType  = false
reportUnknownArgumentType  = false
exclude = ["**/__pycache__", ".venv", "venv", "observability", "docs"]

[tool.pytest.ini_options]
testpaths    = ["tests"]
pythonpath   = ["src"]
asyncio_mode = "auto"
addopts      = ["--strict-markers", "-ra", "--tb=short"]
markers = [
    "unit: fast, no external deps",
    "integration: requires running stack",
    "observability: OTel tracing/metrics/logging tests",
]

[tool.coverage.run]
branch = true
source = ["src", "scripts", "tools"]
omit   = [
  "tests/**",
  # Generated-only file (hand_editing: forbidden) requiring l9_sdk runtime
  # not installed in template. Re-included when nodes regenerate it with real SDK.
  "src/l9_service/enginehandlers.py",
]

[tool.coverage.report]
show_missing = true
fail_under   = 70
